# helsing-challenge

./: .gitignore  README.md  arch.md  docker-compose.yml  event_relevancy.py  india_scrape.py
backend/: Dockerfile  abstract_scraper.py  decision_gen.py  decision_gen_v2.py  effect_gen.py  event_relevancy.py  ft_scraper.py  hello.py  main.py  pyproject.toml
company_site/: Amazon_facilities.json  amazon.json  arrow.json  company.json  index.html  marriott.json  styles.css
forecast/: dl.py  hello.py  main.py  markets.json  proc.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: EventPopup.tsx  (+5 more)
ft_scraper/: abstract_scraper.py  ft.json  ft_OLD.py  ft_good.py  ft_ingest.py
policy/: add_uids.py  blurb_sg.py  blurber.py  executive_orders.csv  executive_orders.json  executive_orders_updated.json  ft_AE.json  ft_BR.json  ft_CN.json  ft_IN.json  ft_SG.json  ft_UK.json  ft_US.json  ftc_scrape.py  magic.json  scrape_executive_orders.py  sg_scrape.py  uk_bills.json  uk_bills_updated.json  uk_scrape.py  ukparl.py  us_bills.json  us_bills_updated.json  us_scrape.py
polymarket/: generate_keys.py  keys.env  markets.json  polymarket_search.py  processed_markets.json  results.json
rag/: Dockerfile  main.py  pyproject.toml  rag.py  rag_exp.ipynb  vector_search.py
rag/data/: EU.txt  UK.txt  US.txt
rag/main_data/: ft_articles.txt  india_bills_filtered.txt  uk_bills_filtered.txt  us_bills_filtered.txt
rag/test_data/: clean_bills.py  data.txt  json_txt.py
(+11 files in other folders)
