[project]
name = "hcb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.8",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "openai>=1.61.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "uvicorn>=0.34.0",
]
