[project]
name = "forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "bs4>=0.0.2",
    "elasticsearch>=8.17.1",
    "fastapi>=0.115.8",
    "openai>=1.61.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
