[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index>=0.12.15",
    "openai>=1.61.0",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "llama-index-llms-gemini>=0.4.5",
    "llama-index-embeddings-openai>=0.3.1",
]
